@@ -91,7 +91,12 @@
     
     
 <div class="contents">
-<p>This is 1.1 release of the <strong>toOrdinal</strong> package. This release is about the creation of vignettes and <a href="https://CenterForAssessment.github.io/toOrdinal">web-documentation</a> for the package. However, the package now supports:</p>
+<p>This is 1.1 release of the <strong>toOrdinal</strong> package. This release includes a new function <code>toOrdinalDate</code> that converts calendar dates:</p>
+<div class="sourceCode" id="cb1"><pre class="sourceCode r"><code class="sourceCode r"><a class="sourceLine" id="cb1-1" data-line-number="1"><span class="op">&gt;</span><span class="st"> </span><span class="kw"><a href="../../reference/toOrdinalDate.html">toOrdinalDate</a></span>()</a>
+<a class="sourceLine" id="cb1-2" data-line-number="2">[<span class="dv">1</span>] <span class="st">"February 21st, 2019"</span></a>
+<a class="sourceLine" id="cb1-3" data-line-number="3"><span class="op">&gt;</span><span class="st"> </span><span class="kw"><a href="../../reference/toOrdinalDate.html">toOrdinalDate</a></span>(<span class="st">"2017-12-25"</span>)</a>
+<a class="sourceLine" id="cb1-4" data-line-number="4">[<span class="dv">1</span>] <span class="st">"December 25th, 2017"</span></a></code></pre></div>
+<p>This release also updates the <a href="https://CenterForAssessment.github.io/toOrdinal">web-documentation</a> for the package.</p>
 <ul>
 <li>English: toOrdinal(1) returns ‘1st’</li>
 <li>German: toOrdinal(1, language=“German”) returns ‘1te’</li>
