@@ -120,6 +120,7 @@
 <ul>
 <li>Updated GitHub-pages website and documentation</li>
 <li>Fixed minor bugs in code</li>
+<li>Adding toOrdinalDate that converts a ####-##-## date to a pretty format like December 25th, 2018</li>
 </ul>
 </div>
     <div class="section level1">
